--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
+		    Press the up and down keys or click your mouse! <br>
 		    Jessica Hu, Block 4
 	    </footer>
 	</body>
